--- a/articles.css
+++ b/articles.css
@@ -1,4 +1,4 @@
-:root{                      /*https://developer.mozilla.org/en-US/docs/Web/CSS/:root*/
+:root{
     font-size: 16px; 
     font-family: 'Sriracha', cursive;
 }
@@ -23,16 +23,16 @@ header{
     background-color: rgb(201, 221, 245);
 }
 
-.present a{
+.present {
     display: grid;
     grid-template-rows: 30px;
     padding-left: 15px;
     font-size: 10px;
-    text-decoration: none;            /* https://css-tricks.com/almanac/properties/t/text-decoration/ */
+    text-decoration: none;
 }    
 
 .who {    
-    color:  rgba(12, 31, 92, 0.76);
+    color:  rgba(12, 92, 85, 0.76);
     
 }
 
@@ -53,7 +53,11 @@ header{
     font-size: 23px;
     color:  rgba(11, 73, 68, 0.76);
     text-decoration: none;
-}    
+}  
+
+.menu a:hover  {
+    font-size: 30px;
+}
 
 #articles .activ {
     font-size: 30px;
