--- a/index.css
+++ b/index.css
@@ -114,22 +114,21 @@ header{
 
 .lawsuits{
     padding-left: 10%;
-
 }  
 
 .memorandums{
     padding-left: 20%;
-
 }  
 
 .expertise{
     padding-left: 30%;
-
 }  
 
 .translations{
     padding-left: 40%;
-
 }  
 
+.transl{
+    padding-left: 50%;
+}
 
